[dependencies]
anyhow = "1.0"
base64 = "0.22"
process_macros = "0.1"
rand = "0.8"
serde_json = "1.0"
url = "2.5"
wit-bindgen = "0.42.1"
http = "1.1"

[dependencies.caller-utils]
optional = true
path = "../target/caller-utils"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.hyperprocess_macro]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "f1cd5bb"

[dependencies.hyperware_app_common]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "f1cd5bb"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "anthropic-api-key-manager"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
