[dependencies]
anyhow = "1.0"
base64 = "0.22"
http = "1.1"
hyperapp_macro = "0.1.1"
process_macros = "0.1"
rand = "0.8"
serde_json = "1.0"
url = "2.5"
wit-bindgen = "0.42.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.hyperware_process_lib]
features = ["hyperapp"]
git = "https://github.com/hyperware-ai/process_lib"
rev = "1a6ad9d"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "anthropic-api-key-manager"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
